--- a/sopwriter-backend/.env.example
+++ b/sopwriter-backend/.env.example
@@ -1,36 +1,17 @@
-# Server Configuration
 PORT=5000
 NODE_ENV=development
-
-# Database
-MONGO_URI=mongodb://admin:admin123@localhost:27017/gdocs_dev?authSource=admin
-
-# Email Configuration
-FROM_EMAIL=noreply@gdocs.com
-ADMIN_NOTIFY_EMAIL=admin@gdocs.com
+MONGO_URI=
+FROM_EMAIL=
+ADMIN_NOTIFY_EMAIL=
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
-
-# Alternative: SendGrid
-# SENDGRID_API_KEY=your-sendgrid-key
-
-# Security
-JWT_SECRET=your-super-secret-jwt-key-min-32-chars-long-change-this
-
-# CORS
-CORS_ORIGIN=http://localhost:3000,http://localhost:5173
-
-# Rate Limiting
+SMTP_SECURE=false
+SMTP_USER=
+SMTP_PASS=
+JWT_SECRET=sopwriter-secure-jwt-secret-key-2025
+CORS_ORIGIN=http://localhost:5173
+APP_BASE_URL=http://localhost:5173
+ADMIN_EMAIL=admin@sopwriter.com
+ADMIN_PASSWORD=admin123
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX=100
-
-# Default Fallback Values (Optional - only used if database settings are empty)
-# These are shown to users if admin hasn't configured via admin panel
-DEFAULT_CONTACT_PHONE=+1234567890
-DEFAULT_WHATSAPP=1234567890
-DEFAULT_CONTACT_EMAIL=info@example.com
-DEFAULT_SUPPORT_EMAIL=support@example.com
-DEFAULT_UPI_ID=example@upi
-DEFAULT_QR_IMAGE=/qr.jpg
