--- a/sopwriter-backend/.env.test
+++ b/sopwriter-backend/.env.test
@@ -1,21 +1,29 @@
+# Test Environment Configuration
 NODE_ENV=test
-PORT=5000
-MONGO_URI=mongodb://localhost:27017/test
-FROM_EMAIL=test@example.com
-ADMIN_NOTIFY_EMAIL=admin@example.com
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=test@example.com
-SMTP_PASS=testpassword
-SMTP_SECURE=false
-JWT_SECRET=test-jwt-secret-key-at-least-32-characters-long
-CORS_ORIGIN=http://localhost:5173
-APP_BASE_URL=http://localhost:5173
+PORT=5001
+MONGO_URI=mongodb://localhost:27017/sopwriter-test
+APP_BASE_URL=http://localhost:5001
+
+# Auth
+JWT_SECRET=this-is-a-very-long-secret-key-for-testing-purposes-that-meets-the-sixty-four-character-requirement-at-least-i-hope-so-1234567890
 ADMIN_EMAIL=admin@test.com
-ADMIN_PASSWORD=TestAdmin@123
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX=100
-RATE_LIMIT_MAX_LEADS=10
-RATE_LIMIT_MAX_TRANSACTIONS=20
-LOG_LEVEL=silent
+ADMIN_PASSWORD=password123
+
+# Mail
 MAIL_PROVIDER=memory
+FROM_EMAIL=noreply@test.com
+ADMIN_NOTIFY_EMAIL=admin@test.com
+SMTP_HOST=smtp.test.com
+SMTP_PORT=587
+SMTP_USER=test
+SMTP_PASS=test
+SMTP_SECURE=false
+
+# CORS
+CORS_ORIGIN=http://localhost:3000
+
+# Rate Limiting (Relaxed for tests)
+RATE_LIMIT_WINDOW_MS=60000
+RATE_LIMIT_MAX=1000
+RATE_LIMIT_MAX_LEADS=1000
+RATE_LIMIT_MAX_TRANSACTIONS=1000
