--- a/sopwriter-frontend/.env.example
+++ b/sopwriter-frontend/.env.example
@@ -1,6 +1,5 @@
-# API Configuration
-VITE_API_URL=http://localhost:5000
-
-# Branding
-VITE_APP_NAME=Application Services
-
+VITE_API_URL=http://localhost:5000/api
+VITE_APP_NAME=SOPWriter
+VITE_SUPPORT_EMAIL=support@sopwriter.com
+VITE_UPI_ID=example@upi
+VITE_UPI_QR_URL=/qr.jpg
