--- a/sopwriter-backend/.env.example
+++ b/sopwriter-backend/.env.example
@@ -1,28 +1,43 @@
+# Server Configuration
 PORT=5000
 NODE_ENV=development
+APP_BASE_URL=http://localhost:5000
+
+# Database
 MONGO_URI=mongodb://localhost:27017/sopwriter
-FROM_EMAIL=noreply@sopwriter.com
-ADMIN_NOTIFY_EMAIL=admin@sopwriter.com
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_SECURE=false
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
-JWT_SECRET=your-strong-jwt-secret-key-at-least-32-characters-long-change-me
+
+# Security
+JWT_SECRET=super_secret_jwt_key_min_32_chars_for_production_security
 CORS_ORIGIN=http://localhost:5173
-APP_BASE_URL=http://localhost:5173
-ADMIN_EMAIL=admin@sopwriter.com
-ADMIN_PASSWORD=Admin@SecureP@ssw0rd!ChangeMe
+
+# Admin Credentials (for seeding)
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=change_this_password_123
+
+# Email Configuration (SMTP)
+MAIL_PROVIDER=smtp
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USER=user@example.com
+SMTP_PASS=password
+SMTP_SECURE=false
+FROM_EMAIL=no-reply@sopwriter.com
+ADMIN_NOTIFY_EMAIL=admin@sopwriter.com
+
+# SendGrid (Optional, if MAIL_PROVIDER=sendgrid)
+# SENDGRID_API_KEY=SG.your_api_key
+
+# Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX=100
-RATE_LIMIT_MAX_LEADS=10
-RATE_LIMIT_MAX_TRANSACTIONS=20
+RATE_LIMIT_MAX_LEADS=50
+RATE_LIMIT_MAX_TRANSACTIONS=50
+
+# Application Defaults
+DEFAULT_CONTACT_PHONE=+911234567890
+DEFAULT_WHATSAPP=1234567890
+DEFAULT_CONTACT_EMAIL=info@sopwriter.com
+DEFAULT_SUPPORT_EMAIL=support@sopwriter.com
+DEFAULT_UPI_ID=example@upi
+DEFAULT_QR_IMAGE=/qr.jpg
 LOG_LEVEL=info
-MAIL_PROVIDER=smtp
-SENDGRID_API_KEY=
-DEFAULT_CONTACT_PHONE=
-DEFAULT_WHATSAPP=
-DEFAULT_CONTACT_EMAIL=
-DEFAULT_SUPPORT_EMAIL=
-DEFAULT_UPI_ID=
-DEFAULT_QR_IMAGE=
