--- a/sopwriter-backend/package.json
+++ b/sopwriter-backend/package.json
@@ -11,6 +11,9 @@
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
     "format": "prettier --write \"src/**/*.ts\"",
+    "seed:admin": "tsx scripts/seedAdmin.ts",
+    "seed:services": "tsx scripts/seedServices.ts",
+    "seed:all": "npm run seed:admin && npm run seed:services",
     "typecheck": "tsc --noEmit",
     "test": "cross-env NODE_ENV=test node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:unit": "cross-env NODE_ENV=test node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js src/tests/unit --runInBand",
