--- a/sopwriter-frontend/vercel.json
+++ b/sopwriter-frontend/vercel.json
@@ -1,7 +1,7 @@
 {
     "rewrites": [
         {
-            "source": "/((?!assets/|.*\\.(js|css|png|jpg|jpeg|svg|ico)).*)",
+            "source": "/(.*)",
             "destination": "/index.html"
         }
     ]
